--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@commander-js/extra-typings": "12.1.0"
+        "@commander-js/extra-typings": "12.1.0",
+        "ws": "8.18.0"
     },
     "devDependencies": {
         "@eslint/js": "9.11.1",
         "@tsconfig/node20": "20.1.4",
         "@types/eslint__js": "8.42.3",
         "@types/node": "22.7.4",
+        "@types/ws": "8.5.12",
         "eslint": "9.11.1",
         "eslint-config-prettier": "9.1.0",
         "prettier": "3.3.3",
