--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint": "9.11.1",
         "eslint-config-prettier": "9.1.0",
         "prettier": "3.3.3",
+        "tsx": "4.19.1",
         "typescript": "5.6.2",
         "typescript-eslint": "8.7.0"
     }
