--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Record and replay WebSocket messages",
     "main": "dist/websocket-replay.js",
     "scripts": {
-        "build": "tsc --outDir dist src/*.ts",
-        "check-types": "tsc --noEmit src/*.ts",
+        "build": "tsc",
+        "check-types": "tsc --noEmit",
         "format": "prettier --write .",
         "lint": "eslint src/.",
         "test": "echo \"Error: no test specified\" && exit 1"
