--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "@tsconfig/node20",
     "compilerOptions": {
         "baseUrl": "./src/",
+        "outDir": "./dist",
         "paths": {
             "@/*": ["./*"]
         },
